--- a/bookShop.html
+++ b/bookShop.html
@@ -11,4 +11,21 @@
     
 </body>
 </html>
+
+<script type="text/javascript" id="bookScript" >
+    //  books = {};
+    // fetch("Books.json")
+    // .then(resonese=>{
+      
+    //     return resonese.json();
+    // })
+    // .then(data=>{
+    //     console.log(data);
+    //    books=data;
+    //    console.log(books)
+    // }).catch(error=>{
+    //     console.error("something went wrong while fetching data");
+    //     console.error(error);
+    // });
+</script>
 <script src="./bookShop.js"></script>
